fix unordered-list li items overflow, esp on about page

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -243,3 +243,9 @@ footer > hr {
 .ghcup-os-container > * {
     text-align: center;
 }
+
+/* fix list overflows (esp about page) */
+ul > li {
+    overflow-wrap: anywhere;
+}
+
